--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,7 +6,7 @@
     <title>vrello</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
   </head>
